Created difficulty_dropdown Improved Dropdowns in general Made max_portions a Setting Base for generic validation errors Translations

--- a/config/app.yml
+++ b/config/app.yml
@@ -4,6 +4,7 @@ defaults: &defaults
   sitename: "Foodblog"
   about: "About Text!"
   text_rows: 10
+  max_portions: 30
 
 development:
   <<: *defaults
